# worklog

./: .gitignore  CLAUDE.md  build-release.bat  bump-version.ps1  index.html  package.json  pnpm-lock.yaml
.cate/: workspace.json
docs/superpowers/plans/: 2026-05-28-tag-config-dialog.md  2026-06-06-log-projects.md  2026-06-07-project-filter.md
docs/superpowers/specs/: 2026-05-28-tag-config-dialog-design.md  2026-06-07-project-filter-design.md
src/: App.css  App.tsx  keybindings.ts  theme.ts  types.ts  useAppState.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  git.rs  log.rs  meta.rs  mod.rs  notes.rs  session.rs  todo.rs
src/components/dialogs/: ConfigDialog.tsx  ConfirmDialog.tsx  ContentEditDialog.tsx  DebriefingDialog.tsx  FocusDialog.tsx  GanttDialog.tsx  KeybindingsHelpDialog.tsx  NewTodoDialog.tsx  TagSelectDialog.tsx  TodoDetailDialog.tsx  WeeklyReviewDialog.tsx
src/components/panels/: ContentPanel.tsx  GlobalSearchBar.tsx  LogPanel.tsx  TodoPanel.tsx
src/components/widgets/: DateSeparator.tsx  FilterBar.tsx  LogEntryRow.tsx  SessionBar.tsx  Toast.tsx  TodoRow.tsx
src/lib/: format.ts  invoke.ts
